--- a/src/index.css
+++ b/src/index.css
@@ -20,16 +20,16 @@
 }
 
 .black-gradient {
-  background: #0a0a0a; /* fallback for old browsers */
+  background: #000000; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
-    #1e1e1e,
-    #0a0a0a
+    #434343,
+    #000000
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right,
-    #1e1e1e,
-    #0a0a0a
+    #434343,
+    #000000
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
